# FullGame

./: CMakeLists.txt  LaunchGame.bat  README.md
00_Game/: CMakeLists.txt
00_Game/src/: main.cpp
engine/: CMakeLists.txt
engine/include/Engine/Core/: Application.hpp  Logger.hpp
engine/include/Engine/Input/: InputSystem.hpp
engine/include/Engine/Math/: MathTypes.hpp
engine/include/Engine/Platform/: Window.hpp
engine/include/Engine/Render/: VulkanRenderer.hpp
engine/include/Engine/Scene/: DebugCamera.hpp
engine/src/Core/: Application.cpp  Logger.cpp
engine/src/Input/: InputSystem.cpp
engine/src/Math/: MathTypes.cpp
engine/src/Platform/: Window.cpp
engine/src/Render/: VulkanRenderer.cpp
engine/src/Scene/: DebugCamera.cpp
game/src/: main.cpp
scripts/: README.md  auto_player_spawn_colors.gd  player_color_palette.gd  terrain_seed_autoconfig.gd
src/scripts/: README.md
